--- a/final-project-fe/Pages/Mentor/MentorPage/CreateCourse.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/CreateCourse.cshtml
@@ -14,7 +14,7 @@
 					<div class="top-banner">
 						<h1>Create Courses</h1>
 						<nav class="breadcrumb">
-							<a href="/Mentor/MentorPage/Index" class="breadcrumb-item">Courses</a>
+							<a href="/Mentor/MentorPage/MyCourses" class="breadcrumb-item">My Courses</a>
 							<span class="breadcrumb-item active">Create Courses</span>
 						</nav>
 					</div>
@@ -49,7 +49,6 @@
 					</div>
 					<div class="forum-form">
 							<partial name="_Notification" />
-						<h5 class="f-title"><i class="ti-info-alt"></i> Create Course</h5>
 							<form method="post" enctype="multipart/form-data">
 								<div class="form-group">
 									<input type="text" asp-for="Course.CourseName" class="form-control" required />
