--- a/final-project-fe/Pages/Mentor/MentorPage/MyCourses.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/MyCourses.cshtml
@@ -123,7 +123,7 @@
                                             <div class="g-post-meta">
                                                 <div class="post-title">
                                                     <h4>
-                                                        <a title="@course.CourseName" href="/Mentor/MentorPage/CourseDetail?id=@course.CourseId">
+                                                        <a title="@course.CourseName" href="/Mentor/MentorPage/EditCourse?courseId=@course.CourseId">
                                                             @course.CourseName
                                                         </a>
                                                     </h4>
