--- a/final-project-fe/wwwroot/css/style.css
+++ b/final-project-fe/wwwroot/css/style.css
@@ -4722,7 +4722,7 @@ canvas {
 }
 
 .top-area > ul.main-menu > li::after {
-    content: "";
+    /*content: "";*/
     font-family: fontawesome;
     font-size: 13px;
     position: absolute;
