Add Create Review Page

--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
@@ -61,10 +61,10 @@
 						<a href="#" title="">Home</a>
 						<ul>
 							<li>
-								<a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+								<a class="nav-link text-dark" asp-area="" asp-page="/Index">Forum Page</a>
 							</li>
 							<li>
-								<a class="nav-link text-dark" asp-page="/Mentor/MentorPage/MyCourses">My Courses</a>
+								<a class="nav-link text-dark" asp-page="/Mentor/MentorPage/Index">Course Page</a>
 							</li>
 						</ul>
 					</li>
