--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -73,10 +73,10 @@
 						<a href="#" title="">Home</a>
 						<ul>
 							<li>
-								<a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+								<a class="nav-link text-dark" asp-area="" asp-page="/Index">Forum Page</a>
 							</li>					
 							<li>
-								<a class="nav-link text-dark" asp-page="/Mentor/MentorPage/MyCourses">My Courses</a>
+								<a class="nav-link text-dark" asp-page="/Mentor/MentorPage/Index">Course Page</a>
 							</li>
 						</ul>
 					</li>
@@ -84,7 +84,7 @@
 						<a href="#" title="">more pages</a>
 						<ul>
 							<li>
-								<a class="nav-link text-dark" asp-area="" asp-page="/PointTransaction">Point Transaction</a>
+								<a class="nav-link text-dark" asp-area="" asp-page="/PointTransaction">Buy Point</a>
 							</li>
 							<li>
 								<a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
