--- a/final-project-fe/Pages/Mentor/MentorPage/CourseDetail.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/CourseDetail.cshtml
@@ -500,7 +500,7 @@
                                     var ratingCounts = new Dictionary<int, int>();
                                     for (int i = 1; i <= 5; i++)
                                     {
-                                        ratingCounts[i] = @Model.Reviews.Reviews.Count(r => Math.Floor(r.rate) == i);
+                                        ratingCounts[i] = @Model.Reviews.Reviews.Count(r => Math.Floor(r.Rate) == i);
                                     }
                                 }
 
@@ -546,7 +546,7 @@
                                                     <div class="flex text-yellow-400">
                                                         @for (int i = 1; i <= 5; i++)
                                                         {
-                                                            if (i <= review.rate)
+                                                            if (i <= review.Rate)
                                                             {
                                                                 <span>★</span>
                                                             }
