--- a/final-project-fe/Pages/Register.cshtml
+++ b/final-project-fe/Pages/Register.cshtml
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Register to Winku" />
     <meta name="keywords" content="social network, register, signup" />
-    <title>Register - Winku Social Network</title>
+    <title>Register - Phronesis Social Network</title>
     <link rel="icon" href="~/images/fav.png" type="image/png" sizes="16x16">
 
     <link rel="stylesheet" href="~/css/main.min.css">
